sql_union.cc, sql_select.cc:   Code clean-up sql_union.cc, union.test, union.result:   A fix for a bug #978.   This enables that NULL's can be entered into UNION's result set,   although first SELECT columns are NOT NULL.   This is also a start of fixing UNION's properly regarding type   acceptance. sql_select.cc:   A commit for my second July SPRINT task

mysql-test/r/union.result:
  A fix for a bug #978.
  
  This enables that NULL's can be entered into UNION's result set,
  although first SELECT columns are NOT NULL.
  
  This is also a start of fixing UNION's properly regarding type
  acceptance.
mysql-test/t/union.test:
  A fix for a bug #978.
  
  This enables that NULL's can be entered into UNION's result set,
  although first SELECT columns are NOT NULL.
  
  This is also a start of fixing UNION's properly regarding type
  acceptance.
sql/sql_select.cc:
  Code clean-up
sql/sql_union.cc:
  Code clean-up